# Vision-Local

./: README.md  test.txt
robocup_localization23/: CMakeLists.txt  README.md  mainpage.dox  package.xml
robocup_localization23/data/: data.csv
robocup_localization23/include/objects/: line.hpp  obstacle.hpp  robot.hpp
robocup_localization23/include/robocup_localization23/: main_window.hpp  qnode.hpp
robocup_localization23/msg/: master2localization23.msg  robocup_localization23.msg
robocup_localization23/resources/param/: PARAM1.txt  PARAM2.txt  PARAM3.txt  PARAM4.txt  PARAM5.txt  PARAM6.txt
robocup_localization23/src/: main.cpp  main_window.cpp  qnode.cpp
robocup_localization23/ui/: main_window.ui
robocup_vision23_yolov4/: CAM_SETTING.txt  CMakeLists.txt  README.md  mainpage.dox  package.xml
robocup_vision23_yolov4/include/YoloV4/: YoloV4.hpp
robocup_vision23_yolov4/include/pan_tilt/: pan_tilt.hpp
robocup_vision23_yolov4/include/pid_control_float/: pid_control_float.cpp  pid_control_float.h
robocup_vision23_yolov4/include/robit_vision/: robit_master_vision.cpp  robit_master_vision.h  robitvision.cpp  robitvision.hpp
robocup_vision23_yolov4/include/robocup_vision23_yolov4/: main_window.hpp  qnode.hpp
robocup_vision23_yolov4/msg/: robocup_vision23.msg  robocup_vision23_feature.msg
robocup_vision23_yolov4/net/: yolov4-tiny-1ch-cls3-v7.cfg
robocup_vision23_yolov4/resources/HSV/: HSV.txt
robocup_vision23_yolov4/src/: main.cpp  main_window.cpp  qnode.cpp
robocup_vision23_yolov4/ui/: main_window.ui
